--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,275 @@
-opencv-python
-tqdm
+absl-py==1.4.0
+accelerate==0.22.0
+addict==2.4.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+aliyun-python-sdk-core==2.13.36
+aliyun-python-sdk-kms==2.16.1
+aniso8601==9.0.1
+annotated-types==0.5.0
+antlr4-python3-runtime==4.8
+anyio==4.0.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.4.0
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.1.0
+audioread==3.0.0
+Babel==2.12.1
+backcall==0.2.0
+beautifulsoup4==4.12.2
+bidict==0.22.1
+bitarray==2.8.1
+bleach==6.0.0
+Bottleneck==1.3.7
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+cloudpickle==2.2.1
+cmake==3.27.4.1
+colorama==0.4.6
+coloredlogs==14.0
+comm==0.1.4
+contourpy==1.1.0
+crcmod==1.7
+cryptography==41.0.3
+cycler==0.11.0
+Cython==3.0.2
+datasets==2.13.0
+debugpy==1.7.0
+decorator==5.1.1
+decord==0.6.0
+defusedxml==0.7.1
+diffusers==0.20.2
+dill==0.3.6
+Distance==0.1.3
+dnspython==2.3.0
+edit-distance==1.0.6
+editdistance==0.6.2
+einops==0.6.1
+espnet-tts-frontend==0.0.3
+et-xmlfile==1.1.0
+eventlet==0.33.3
+exceptiongroup==1.1.3
+executing==1.2.0 
+fastjsonschema==2.18.0
+ffmpeg-python==0.2.0
+filelock==3.12.3
+Flask==2.2.5
+Flask-Cors==4.0.0
+Flask-RESTful==0.3.10
+Flask-SocketIO==5.3.6
+flask-talisman==1.1.0
+flatbuffers==23.5.26
+fonttools==4.42.1
+fqdn==1.5.1
+frozenlist==1.4.0
+fsspec==2023.9.0
+ftfy==6.1.1
+future==0.18.3
+g2p==1.1.20230822
+g2p-en==2.1.0
+gast==0.4.0
+google-auth==2.22.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+greenlet==2.0.2
+grpcio==1.58.0
+h11==0.14.0
+h5py==3.9.0
+huggingface-hub==0.16.4
+humanfriendly==10.0 
+idna==3.4
+importlib-metadata==6.8.0
+importlib-resources==6.0.1
+inflect==7.0.0
+ipykernel==6.25.2
+ipython==8.15.0
+isoduration==20.11.0
+itsdangerous==2.1.2
+jaconv==0.3.4
+jamo==0.4.1
+jedi==0.19.0
+jieba==0.42.1
+Jinja2==3.1.2
+jmespath==0.10.0
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.4
+jsonschema==4.19.0
+jsonschema-specifications==2023.7.1
+jupyter-events==0.7.0
+jupyter-lsp==2.2.0
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+jupyter_server==2.7.3
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.5
+jupyterlab-pygments==0.2.2
+jupyterlab_server==2.24.0
+kaldiio==2.18.0
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
+libclang==16.0.6
+librosa==0.9.2
+lightning-utilities==0.9.0
+lit==16.0.6
+llvmlite==0.40.1
+lxml==4.9.3
+Markdown==3.4.4
+MarkupSafe==2.1.3
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mistune==3.0.1
+modelscope==1.9.0
+mpmath==1.3.0
+ms-swift==1.0.0
+multidict==6.0.4
+multiprocess==0.70.14
+munkres==1.1.4
+nara-wpe==0.0.9
+nbclient==0.8.0
+nbconvert==7.8.0
+nbformat==5.9.2
+nest-asyncio==1.5.7
+networkx==2.8.4
+nltk==3.8.1
+notebook_shim==0.2.3
+numba==0.57.1
+numpy==1.24.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+nvidia-cufft-cu11==10.9.0.58
+nvidia-curand-cu11==10.2.10.91
+nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusparse-cu11==11.7.4.91
+nvidia-nccl-cu11==2.14.3
+nvidia-nvtx-cu11==11.7.91
+oauthlib==3.2.2
+opencv-python==4.8.0.76
+openpyxl==3.1.2
+opt-einsum==3.3.0
+oss2==2.18.1
+overrides==7.4.0
+packaging==23.1
+pandas==2.1.0
+pandocfilters==1.5.0
+panphon==0.20.0
+parso==0.8.3
+peft==0.5.0
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==10.0.0
+platformdirs==3.10.0
+pooch==1.7.0
+portalocker==2.7.0
+prometheus-client==0.17.1
+prompt-toolkit==3.0.39
+protobuf==3.19.6
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==13.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycocoevalcap==1.2
+pycocotools==2.0.7
+pycparser==2.21
+pycryptodome==3.18.0
+pydantic==2.4.2
+pydantic_core==2.10.1
+pyDeprecate==0.3.2
+pydot==1.4.2
+Pygments==2.16.1
+pyparsing==3.0.9
+pypinyin==0.49.0
+python-dateutil==2.8.2
+python-engineio==4.7.1
+python-json-logger==2.0.7
+python-socketio==5.9.0
+pytorch-wpe==0.0.1
+pytz==2023.3.post1
+PyYAML==6.0.1
+pyzmq==25.1.1
+rapidfuzz==3.2.0
+referencing==0.30.2
+regex==2023.8.8
+requests==2.31.0
+requests-oauthlib==1.3.1
+resampy==0.4.2
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rotary-embedding-torch==0.3.2
+rouge-score==0.0.4
+rpds-py==0.10.2
+rsa==4.9
+sacrebleu==2.3.1
+safetensors==0.3.3
+scikit-learn==1.3.0
+scipy==1.11.2
+Send2Trash==1.8.2
+sentencepiece==0.1.99
+simple-websocket==0.10.1
+simplejson==3.19.1
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soundfile==0.12.1
+soupsieve==2.5
+stack-data==0.6.2
+sympy==1.12
+tabulate==0.9.0
+taming-transformers-rom1504==0.0.6
+tensorboard==2.10.1
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.3.0
+terminado==0.17.1
+text-unidecode==1.3
+TextGrid==1.5
+threadpoolctl==3.2.0
+timm==0.9.7
+tinycss2==1.2.1
+tokenizers==0.13.3
+tomli==2.0.1
+torch==2.0.1
+torch-complex==0.4.3
+torchaudio==2.0.2
+torchmetrics==1.1.1
+torchvision==0.15.2
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.9.0
+transformers==4.33.1
+triton==2.0.0
+typing_extensions==4.7.1
+tzdata==2023.3
+unicodecsv==0.14.1
+unicodedata2==15.0.0
+Unidecode==1.3.7
+uri-template==1.3.0
+urllib3==1.26.16
+wcwidth==0.2.6
+webcolors==1.13
+webencodings==0.5.1
+websocket-client==1.6.2
+Werkzeug==2.2.3
+wrapt==1.15.0
+wsproto==1.2.0
+xxhash==3.3.0
+yapf==0.40.1
+yarl==1.9.2
+zhconv==1.4.3
+zipp==3.16.2
